# data_eng_a1

./: .gitignore  ANALYSIS.md  FINAL_DELIVERABLES.md  INDEX_VISUALIZATION.md  PHASE3_DELIVERABLES.md  PHASE6_IMPROVEMENTS.md  README.md  TEST_COMMANDS.md  docker-compose.yml  pyproject.toml  test_connection.py
docs/: indexes.md  schema_diagram.md
docs/deliverables/: ANALYSIS.md  INDEX_VISUALIZATION.md
docs/guides/: QUICK_START.md  RUN_TESTS.md  TEST_COMMANDS.md
experiments/: claude.md
import/: claude.md  import_data.py  test_import_sample.py  test_review_data.py
queries/: PERFORMANCE.md  claude.md  explain_analyze.py  query_functions.py  test_all.py  test_performance.py
schema/: claude.md  create_indexes.sql  create_tables.sql
scripts/: init_db.py  view_schema.py
